--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Fetch the tasks.json file and display the tasks
-        fetch('C:\Users\LENOVO\Desktop\TaskManager\bin\Debug\net8.0-windows\tasks.json')
+        fetch('tasks.json')
     .then(response => {
         if (!response.ok) {
             throw new Error('Network response was not ok: ' + response.statusText);
